--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ footer {
   padding: 30px;
   background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
   color: white;
+  margin: 0;
 }
 
 /* styles row-content custom class, adds 50px padding top/bottom, 0 right/left. adds 1px ridged border to bottom. sets minimum height to 200px */
@@ -38,4 +39,8 @@ footer {
   padding: 50px 0;
   border-bottom: 1px ridge;
   min-height: 200px;
+}
+
+.navbar {
+  background-color: #901cad;
 }
